@@ -188,9 +188,7 @@ You can look for additional information at:
 
 =for :list
 * L<GitHub|https://github.com/gryphonshafer/exact-class>
-* L<CPAN|http://search.cpan.org/dist/exact-class>
 * L<MetaCPAN|https://metacpan.org/pod/exact::class>
-* L<AnnoCPAN|http://annocpan.org/dist/exact-class>
 * L<Travis CI|https://travis-ci.org/gryphonshafer/exact-class>
 * L<Coveralls|https://coveralls.io/r/gryphonshafer/exact-class>
 * L<CPANTS|http://cpants.cpanauthors.org/dist/exact-class>
