@@ -1,5 +1,6 @@
-use Test::Most tests => 1;
+use Test::Most tests => 2;
 
 BEGIN {
     use_ok( 'exact', 'class' );
+    use_ok('exact::class');
 }
