@@ -1,6 +1,10 @@
 Revision history for exact::class
 
 {{$NEXT}}
+        - Major refactor to more closely match Mojo::Base internal practices
+        - Switch to mostly inheritance by default instead of injection of key methods
+        - Depends on exact v1.10 for inheritance
+        - Inheritance conducted by placing self at end of diamond inheritance list
 
 1.04      2019-08-26 15:09:25-07:00 America/Los_Angeles
         - Reverting signatures from a test because older Perls can't do that
